Fix #9 left-align course sections in filtered_course_list

--- a/less/blocks.less
+++ b/less/blocks.less
@@ -16,3 +16,9 @@
         color: #FFFFFF;
     }
 }
+
+.block_filtered_course_list {
+    .course-section {
+        padding-left: 0;
+    }   
+}
