--- a/style/stellar.css
+++ b/style/stellar.css
@@ -17362,6 +17362,9 @@ a.navbar-brand h1 {
   background-color: #822433;
   color: #FFFFFF;
 }
+.block_filtered_course_list .course-section {
+  padding-left: 0;
+}
 a.moodlezoom .zoomin {
   display: inline-block;
   margin-bottom: 0;
